src/styles/AppPage.css
body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

header {
  background-color: black;
  color: white;
  height: 8rem;

  display: flex;
  align-items: center;
  padding: 0 2rem;

  #info {
    width: 15%;

    h1 {
      font-family: 'Courier New', Courier, monospace;
    }
  }

  #update-info {
    width: 70%;
    text-align: center;
  }

  nav {
    width: 15%;
    text-decoration: none;

    ul {
      display: flex;
    }
    li {
      list-style: none;
    }
    a {
      text-decoration: none;
      margin: 0 1rem;
      color: white;
    }
  }
}

main {
  #text-input-container {
    padding: 4rem 2rem;
    display: flex;
    justify-content: center;
  
    #text-input {
      font-size: 1.5rem;
      height: 3rem;
      width: 50%;
      padding-left: 2rem;
    }
  
    #change-button {
      font-size: 1.5rem;
      height: 3.4rem;
      width: 10%;
    }
  }
  
  #display-container {
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: center;
  
    background-color: white;
    padding-bottom: 4rem;
  }
  
  #display {
    background-color: black;
    width: 90%;
    height: 50rem;
    padding: 0.5rem 1rem 0.5rem 0.5rem;
    
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(10rem, 1fr));
  }
  
  .split-flap {
    font-family: Arial, Helvetica, sans-serif;
    position: relative;
    width: 4rem;
    height: 8rem;
    margin: 1rem;
    display: flex;
  }
  
  .current {
    display: flex;
    position: relative;
    z-index: 1;
  }
  
  .next {
    display: flex;
  }
  
  .top, .bottom {
    position: absolute;
    background-color: #222;
    width: 4rem;
    height: 8rem;
  
    font-size: 4rem;
    color: white;
    white-space: pre;
    
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

footer {
  background-color: black;
  position: relative;
  margin-top: 1.5rem;
  height: 1.5rem;
  width: 100vw;
  color: white;
  padding: 0 1rem;

  display: flex;
  align-items: center;
}

